--- a/client/src/components/ui/Tabler.css
+++ b/client/src/components/ui/Tabler.css
@@ -187,7 +187,7 @@ a {
     color: #467fcf;
     text-decoration: none;
     background-color: transparent;
-    -webkit-text-decoration-skip: objects;
+    -webkittext-decoration-skip-ink: objects
 }
 
 a:hover {
