--- a/client/src/components/ui/Tabler.css
+++ b/client/src/components/ui/Tabler.css
@@ -9863,8 +9863,8 @@ body *:hover::-webkit-scrollbar-thumb {
 }
 
 a {
-    -webkit-text-decoration-skip: ink;
-    text-decoration-skip: ink;
+    -webkit-text-decoration-skip: auto;
+    text-decoration-skip-ink: auto
 }
 
 h1 a,
